--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "win32"
   ],
   "dependencies": {
-    "bindings": "1.5.0",
+    "node-gyp-build": "^4.3.0",
     "nan": "latest",
     "stable": "^0.1.8"
   },
+
+  "devDependencies": {
+    "prebuildify": "^5.0.1"
+  },
+
   "optionalDependencies": {
     "@types/node": "^14.0.5"
   },
@@ -40,8 +45,8 @@
     "npm": ">= 1.1.x"
   },
   "scripts": {
-    "install": "node-gyp configure build",
-    "install-debug": "node-gyp configure build --debug",
+    "prebuild": "prebuildify --napi --strip --target=15.3.1",
+    "prepublishOnly": "npm run prebuild",
     "test": "node ./test/index.js"
   },
   "license": "MIT",
